test/cli/test-context-configmap-gpol/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
clusterResources:
- clusterresources.yaml
kind: Test
metadata:
  name: test-context-configmap-gpol
policies:
- policy.yaml
resources:
- resource.yaml
results:
- generatedResource: generatedResource.yaml
  isGeneratingPolicy: true
  kind: Deployment
  policy: generate-env-config
  resources:
  - test-deploy
  result: pass
